# trashlator

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
app/: chunk_merger.py  cli.py  config.py  logging_config.py  masking.py  pipeline.py  preprocess.py  qe.py  translator.py  validate.py
qe/: __init__.py  base.py  comet_backend.py  result.py  service.py  transquest_backend.py
tests/: test_lowercase_messages_cli.py  test_masking.py  test_output_to_sample_cli.py  test_pipeline.py  test_pipeline_helpers.py  test_preprocess.py  test_qe_runner_cli.py  test_sample_cli.py  test_translator.py  test_validate.py
tests/qe/: test_service.py  test_transquest_backend.py
utils/: lowercase_messages_cli.py  output_to_sample_cli.py  qe_runner_cli.py  sample_cli.py
