[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phish-translator"
version = "0.1.0"
description = "Batch translation pipeline for phishing and legit text datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0,<3.0.0",
    "torch>=2.2.0,<3.0.0",
    "transformers>=4.40.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools]
packages = ["app"]