[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trashlator"
version = "0.1.0"
description = "Robust machine translation pipeline for noisy, deception and phishing-like text."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "emoji>=2.12.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "sentencepiece>=0.2.0,<1.0.0",
    "torch>=2.2.0,<3.0.0",
    "transformers>=4.40.0,<5.0.0",
    "unbabel-comet>=2.0.0",
]

[project.optional-dependencies]
qe = [
    "unbabel-comet>=2.0.0",
]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
trashlator = "app.cli:main"
trashlator-sample = "utils.sample_cli:main"
trashlator-output-to-sample = "utils.output_to_sample_cli:main"
trashlator-qe = "utils.qe_runner_cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools]
packages = ["app", "utils", "qe"]
